// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CrowdfundingCard /> by default matches with snapshot 1`] = `
<div
  data-radium={true}
>
  <div
    className="k-Card k-Card--light k-Card--withoutBoxShadowOnHover"
    data-radium={true}
    href={null}
    onClick={[Function]}
    style={
      Object {
        "paddingBottom": "10px",
        "position": "relative",
      }
    }
  >
    <div
      className="k-Card__imageContainer"
      data-radium={true}
      style={
        Object {
          "backgroundColor": "#d8d8d8",
          "marginBottom": null,
          "marginTop": null,
          "overflow": "hidden",
          "paddingTop": "56.25%",
          "position": "relative",
        }
      }
    >
      <img
        alt=""
        className="k-Card__image"
        data-radium={true}
        src="https://placehold.it/350x200/4a84ff/4a84ff"
        style={
          Object {
            "display": "block",
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
      />
    </div>
    <div
      data-radium={true}
      style={
        Object {
          "WebkitAlignItems": "center",
          "WebkitBoxAlign": "center",
          "alignItems": "center",
          "backgroundColor": "#fff",
          "display": "inline-flex",
          "marginTop": "-30px",
          "msFlexAlign": "center",
          "position": "relative",
          "top": "0",
        }
      }
    >
      <div
        data-radium={true}
        style={
          Object {
            "marginBottom": "0.625rem",
            "marginTop": "0.625rem",
          }
        }
      >
        <span
          className="k-ButtonImage k-ButtonImage--withoutPointerEvents"
          style={
            Object {
              "backgroundColor": "#d8d8d8",
              "marginLeft": "10px",
            }
          }
          tabIndex={null}
        >
          <img
            alt=""
            className="k-ButtonImage__img"
            src="https://placehold.it/100x100/4a84ff/4a84ff"
          />
        </span>
      </div>
      <div
        data-radium={true}
        style={
          Object {
            "lineHeight": "1.2",
            "marginLeft": "10px",
            "marginRight": "20px",
          }
        }
      >
        <div
          className="k-u-size-micro k-u-weight-regular"
          data-radium={true}
          style={Object {}}
        >
          Owner title
        </div>
        <div
          className="k-u-size-micro k-u-weight-light"
          data-radium={true}
          style={Object {}}
        >
          Owner description
        </div>
      </div>
    </div>
    <div
      data-radium={true}
      style={
        Object {
          "marginBottom": "1.25rem",
          "marginTop": null,
          "minHeight": "70px",
        }
      }
    >
      <div
        data-radium={true}
        style={
          Object {
            "lineHeight": "1",
            "marginBottom": "0.625rem",
            "marginTop": null,
            "padding": "0 10px",
          }
        }
      >
        <p
          className="k-Title k-Card__title k-Title--senary k-Title--withoutMargin"
          data-radium={true}
        >
          <span>
            <span />
            <span>
              Lorem ipsum…
            </span>
            <span
              style={
                Object {
                  "left": 0,
                  "position": "fixed",
                  "top": 0,
                  "visibility": "hidden",
                }
              }
            >
              …
            </span>
          </span>
        </p>
      </div>
      <div
        data-radium={true}
        style={
          Object {
            "WebkitAlignItems": "center",
            "WebkitBoxAlign": "center",
            "alignItems": "center",
            "display": "flex",
            "lineHeight": "1",
            "marginBottom": null,
            "marginTop": "0.625rem",
            "msFlexAlign": "center",
            "padding": "0 10px",
          }
        }
      >
        <span
          className="k-HorizontalStroke k-HorizontalStroke--tiny"
          data-radium={true}
          style={
            Object {
              "margin": "5px 10px 5px 0",
            }
          }
        />
      </div>
    </div>
    <div
      data-radium={true}
      style={
        Object {
          "WebkitBoxLines": "multiple",
          "WebkitFlexWrap": "wrap",
          "display": "flex",
          "flexWrap": "wrap",
          "lineHeight": "1",
          "marginBottom": "0.9375rem",
          "marginTop": "0.9375rem",
          "msFlexWrap": "wrap",
          "padding": "0 10px",
        }
      }
    >
      <div
        data-radium={true}
        style={
          Object {
            "marginBottom": null,
            "marginRight": "30px",
            "marginTop": "0.3125rem",
          }
        }
      >
        <span
          className="k-u-line-height-normal k-u-size-micro k-u-weight-light"
          data-radium={true}
        >
          <strong>
            XX
          </strong>
           
          <br />
          lorem ipsum…
        </span>
      </div>
      <div
        data-radium={true}
        style={
          Object {
            "marginBottom": null,
            "marginRight": "30px",
            "marginTop": "0.3125rem",
          }
        }
      >
        <span
          className="k-u-line-height-normal k-u-size-micro k-u-weight-light"
          data-radium={true}
        >
          <strong>
            XX
          </strong>
           
          <br />
          lorem ipsum…
        </span>
      </div>
      <div
        data-radium={true}
        style={
          Object {
            "marginBottom": null,
            "marginRight": 0,
            "marginTop": "0.3125rem",
          }
        }
      >
        <span
          className="k-u-line-height-normal k-u-size-micro k-u-weight-light"
          data-radium={true}
        >
          <strong>
            XX
          </strong>
           
          <br />
          lorem ipsum…
        </span>
      </div>
    </div>
    <div
      data-radium={true}
      style={
        Object {
          "marginBottom": "1.25rem",
          "marginTop": "0.9375rem",
          "padding": "0 10px",
        }
      }
    >
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow={42}
        className="k-Progress"
        role="progressbar"
      >
        <div
          className="k-Progress__ramp"
          style={
            Object {
              "height": "4px",
            }
          }
        >
          <div
            className="k-Progress__slider"
            style={
              Object {
                "backgroundColor": "null",
                "width": "42%",
              }
            }
          />
        </div>
      </div>
    </div>
    <div
      data-radium={true}
      style={
        Object {
          "WebkitAlignItems": "center",
          "WebkitBoxAlign": "center",
          "alignItems": "center",
          "backgroundColor": "#fff",
          "display": "inline-flex",
          "lineHeight": "1",
          "msFlexAlign": "center",
          "padding": "10px",
          "position": "absolute",
          "right": "0",
          "top": "0",
        }
      }
    >
      <span
        className="k-u-line-height-normal k-u-size-micro k-u-weight-regular"
      >
        Lorem ipsum…
      </span>
    </div>
  </div>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
  />
</div>
`;

exports[`<CrowdfundingCard /> with loading prop matches with snapshot 1`] = `
<div
  data-radium={true}
>
  <div
    className="k-Card k-Card--light k-Card--withoutBoxShadowOnHover"
    data-radium={true}
    href={null}
    onClick={[Function]}
    style={
      Object {
        "paddingBottom": "10px",
        "position": "relative",
      }
    }
  >
    <div
      className="k-Card__imageContainer"
      data-radium={true}
      style={
        Object {
          "backgroundColor": "#d8d8d8",
          "marginBottom": null,
          "marginTop": null,
          "overflow": "hidden",
          "paddingTop": "56.25%",
          "position": "relative",
        }
      }
    />
    <div
      data-radium={true}
      style={
        Object {
          "WebkitAlignItems": "center",
          "WebkitBoxAlign": "center",
          "alignItems": "center",
          "backgroundColor": "#fff",
          "display": "inline-flex",
          "marginTop": "-30px",
          "msFlexAlign": "center",
          "position": "relative",
          "top": "0",
        }
      }
    >
      <div
        data-radium={true}
        style={
          Object {
            "marginBottom": "0.625rem",
            "marginTop": "0.625rem",
          }
        }
      >
        <span
          className="k-ButtonImage k-ButtonImage--withoutPointerEvents"
          style={
            Object {
              "backgroundColor": "#d8d8d8",
              "marginLeft": "10px",
            }
          }
          tabIndex={null}
        >
          <img
            className="k-ButtonImage__img"
          />
        </span>
      </div>
      <div
        data-radium={true}
        style={
          Object {
            "lineHeight": "1.2",
            "marginLeft": "10px",
            "marginRight": "20px",
          }
        }
      >
        <div
          className="k-u-size-micro k-u-weight-regular"
          data-radium={true}
          style={
            Object {
              "backgroundColor": "#d8d8d8",
              "borderBottom": "1px solid #fff",
              "height": "14px",
              "width": "70px",
            }
          }
        />
        <div
          className="k-u-size-micro k-u-weight-light"
          data-radium={true}
          style={
            Object {
              "backgroundColor": "#d8d8d8",
              "borderTop": "1px solid #fff",
              "height": "14px",
              "width": "100px",
            }
          }
        />
      </div>
    </div>
    <div
      data-radium={true}
      style={
        Object {
          "marginBottom": "1.25rem",
          "marginTop": null,
          "minHeight": "70px",
        }
      }
    >
      <div
        data-radium={true}
        style={
          Object {
            "lineHeight": "1",
            "marginBottom": "0.625rem",
            "marginTop": null,
            "padding": "0 10px",
          }
        }
      >
        <div
          data-radium={true}
        >
          <span
            data-radium={true}
            style={
              Object {
                "backgroundColor": "#d8d8d8",
                "borderBottom": "1px solid #fff",
                "display": "block",
                "height": "24px",
              }
            }
          />
          <span
            data-radium={true}
            style={
              Object {
                "backgroundColor": "#d8d8d8",
                "borderBottom": 0,
                "borderTop": "1px solid #fff",
                "display": "block",
                "height": "24px",
                "width": "70%",
              }
            }
          />
        </div>
      </div>
      <div
        data-radium={true}
        style={
          Object {
            "WebkitAlignItems": "center",
            "WebkitBoxAlign": "center",
            "alignItems": "center",
            "display": "flex",
            "lineHeight": "1",
            "marginBottom": null,
            "marginTop": "0.625rem",
            "msFlexAlign": "center",
            "padding": "0 10px",
          }
        }
      >
        <span
          className="k-HorizontalStroke k-HorizontalStroke--tiny"
          data-radium={true}
          style={
            Object {
              "backgroundColor": "#d8d8d8",
              "margin": "5px 10px 5px 0",
            }
          }
        />
        <span
          data-radium={true}
          style={
            Object {
              "backgroundColor": "#d8d8d8",
              "display": "block",
              "height": "12px",
              "width": "80px",
            }
          }
        />
      </div>
    </div>
    <div
      data-radium={true}
      style={
        Object {
          "WebkitBoxLines": "multiple",
          "WebkitFlexWrap": "wrap",
          "display": "flex",
          "flexWrap": "wrap",
          "lineHeight": "1",
          "marginBottom": "0.9375rem",
          "marginTop": "0.9375rem",
          "msFlexWrap": "wrap",
          "padding": "0 10px",
        }
      }
    >
      <div
        data-radium={true}
        style={
          Object {
            "marginBottom": null,
            "marginRight": "30px",
            "marginTop": "0.3125rem",
          }
        }
      >
        <div
          data-radium={true}
        >
          <span
            data-radium={true}
            style={
              Object {
                "backgroundColor": "#d8d8d8",
                "borderBottom": "1px solid #fff",
                "display": "block",
                "height": "16px",
                "width": "40px",
              }
            }
          />
          <span
            data-radium={true}
            style={
              Object {
                "backgroundColor": "#d8d8d8",
                "borderBottom": 0,
                "borderTop": "1px solid #fff",
                "display": "block",
                "height": "16px",
                "width": "65px",
              }
            }
          />
        </div>
      </div>
      <div
        data-radium={true}
        style={
          Object {
            "marginBottom": null,
            "marginRight": "30px",
            "marginTop": "0.3125rem",
          }
        }
      >
        <div
          data-radium={true}
        >
          <span
            data-radium={true}
            style={
              Object {
                "backgroundColor": "#d8d8d8",
                "borderBottom": "1px solid #fff",
                "display": "block",
                "height": "16px",
                "width": "40px",
              }
            }
          />
          <span
            data-radium={true}
            style={
              Object {
                "backgroundColor": "#d8d8d8",
                "borderBottom": 0,
                "borderTop": "1px solid #fff",
                "display": "block",
                "height": "16px",
                "width": "65px",
              }
            }
          />
        </div>
      </div>
      <div
        data-radium={true}
        style={
          Object {
            "marginBottom": null,
            "marginRight": 0,
            "marginTop": "0.3125rem",
          }
        }
      >
        <div
          data-radium={true}
        >
          <span
            data-radium={true}
            style={
              Object {
                "backgroundColor": "#d8d8d8",
                "borderBottom": "1px solid #fff",
                "display": "block",
                "height": "16px",
                "width": "40px",
              }
            }
          />
          <span
            data-radium={true}
            style={
              Object {
                "backgroundColor": "#d8d8d8",
                "borderBottom": 0,
                "borderTop": "1px solid #fff",
                "display": "block",
                "height": "16px",
                "width": "65px",
              }
            }
          />
        </div>
      </div>
    </div>
    <div
      data-radium={true}
      style={
        Object {
          "marginBottom": "1.25rem",
          "marginTop": "0.9375rem",
          "padding": "0 10px",
        }
      }
    >
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow={65}
        className="k-Progress is-disabled"
        role="progressbar"
      >
        <div
          className="k-Progress__ramp"
          style={
            Object {
              "height": "4px",
            }
          }
        >
          <div
            className="k-Progress__slider"
            style={
              Object {
                "backgroundColor": "null",
                "width": "65%",
              }
            }
          />
        </div>
      </div>
    </div>
    <span
      data-radium={true}
      style={
        Object {
          "WebkitAnimation": "x 1s linear infinite",
          "WebkitAnimationName": "radium-animation-22262a33",
          "WebkitTransform": "translateX(-100%)",
          "animation": "x 1s linear infinite",
          "animationName": "radium-animation-22262a33",
          "background": "linear-gradient(90deg, rgba(0, 0, 0, 0),       rgba(255, 255, 255, .3), rgba(0, 0, 0, 0))",
          "bottom": 0,
          "left": 0,
          "msTransform": "translateX(-100%)",
          "position": "absolute",
          "right": 0,
          "top": 0,
          "transform": "translateX(-100%)",
        }
      }
    />
  </div>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "@keyframes radium-animation-22262a33 {
0%{-webkit-transform: translateX(-100%);
-ms-transform: translateX(-100%);
transform: translateX(-100%);}
100%{-webkit-transform: translateX(100%);
-ms-transform: translateX(100%);
transform: translateX(100%);}
}
",
      }
    }
  />
</div>
`;

exports[`<CrowdfundingCard /> with some props matches with snapshot 1`] = `
<div
  data-radium={true}
>
  <a
    className="k-Card k-Card--light k-Card--withoutBoxShadowOnHover"
    data-radium={true}
    href="#foobar"
    onClick={[Function]}
    style={
      Object {
        "paddingBottom": "10px",
        "position": "relative",
      }
    }
  >
    <div
      className="k-Card__imageContainer"
      data-radium={true}
      style={
        Object {
          "backgroundColor": "#d8d8d8",
          "marginBottom": null,
          "marginTop": null,
          "overflow": "hidden",
          "paddingTop": "56.25%",
          "position": "relative",
        }
      }
    >
      <img
        alt="Image alt"
        className="k-Card__image"
        data-radium={true}
        src="#image"
        style={
          Object {
            "display": "block",
            "position": "absolute",
            "top": 0,
            "width": "100%",
          }
        }
      />
    </div>
    <div
      data-radium={true}
      style={
        Object {
          "WebkitAlignItems": "center",
          "WebkitBoxAlign": "center",
          "alignItems": "center",
          "backgroundColor": "#fff",
          "display": "inline-flex",
          "marginTop": "-30px",
          "msFlexAlign": "center",
          "position": "relative",
          "top": "0",
        }
      }
    >
      <div
        data-radium={true}
        style={
          Object {
            "marginBottom": "0.625rem",
            "marginTop": "0.625rem",
          }
        }
      >
        <span
          className="k-ButtonImage k-ButtonImage--withoutPointerEvents"
          style={
            Object {
              "backgroundColor": "#d8d8d8",
              "marginLeft": "10px",
            }
          }
          tabIndex={null}
        >
          <img
            alt="Avatar alt"
            className="k-ButtonImage__img"
            src="#avatar"
          />
        </span>
      </div>
      <div
        data-radium={true}
        style={
          Object {
            "lineHeight": "1.2",
            "marginLeft": "10px",
            "marginRight": "20px",
          }
        }
      >
        <div
          className="k-u-size-micro k-u-weight-regular"
          data-radium={true}
          style={Object {}}
        >
          Custom title
        </div>
        <div
          className="k-u-size-micro k-u-weight-light"
          data-radium={true}
          style={Object {}}
        >
          Custom description
        </div>
      </div>
    </div>
    <div
      data-radium={true}
      style={
        Object {
          "marginBottom": "1.25rem",
          "marginTop": null,
          "minHeight": "70px",
        }
      }
    >
      <div
        data-radium={true}
        style={
          Object {
            "lineHeight": "1",
            "marginBottom": "0.625rem",
            "marginTop": null,
            "padding": "0 10px",
          }
        }
      >
        <h4
          className="k-Title k-Card__title k-Title--senary k-Title--withoutMargin"
          data-radium={true}
        >
          <span>
            <span />
            <span>
              Custom title
            </span>
            <span
              style={
                Object {
                  "left": 0,
                  "position": "fixed",
                  "top": 0,
                  "visibility": "hidden",
                }
              }
            >
              …
            </span>
          </span>
        </h4>
      </div>
      <div
        data-radium={true}
        style={
          Object {
            "WebkitAlignItems": "center",
            "WebkitBoxAlign": "center",
            "alignItems": "center",
            "display": "flex",
            "lineHeight": "1",
            "marginBottom": null,
            "marginTop": "0.625rem",
            "msFlexAlign": "center",
            "padding": "0 10px",
          }
        }
      >
        <span
          className="k-HorizontalStroke k-HorizontalStroke--tiny"
          data-radium={true}
          style={
            Object {
              "margin": "5px 10px 5px 0",
            }
          }
        />
        <span
          className="k-u-size-micro k-u-weight-regular"
        >
          Custom subtitle
        </span>
      </div>
    </div>
    <div
      data-radium={true}
      style={
        Object {
          "WebkitBoxLines": "multiple",
          "WebkitFlexWrap": "wrap",
          "display": "flex",
          "flexWrap": "wrap",
          "lineHeight": "1",
          "marginBottom": "0.9375rem",
          "marginTop": "0.9375rem",
          "msFlexWrap": "wrap",
          "padding": "0 10px",
        }
      }
    >
      <div
        data-radium={true}
        style={
          Object {
            "marginBottom": null,
            "marginRight": "30px",
            "marginTop": "0.3125rem",
          }
        }
      >
        <span
          className="k-u-line-height-normal k-u-size-micro k-u-weight-light"
        >
          Custom information #1
        </span>
      </div>
      <div
        data-radium={true}
        style={
          Object {
            "marginBottom": null,
            "marginRight": "30px",
            "marginTop": "0.3125rem",
          }
        }
      >
        <span
          className="k-u-line-height-normal k-u-size-micro k-u-weight-light"
        >
          Custom information #2
        </span>
      </div>
      <div
        data-radium={true}
        style={
          Object {
            "marginBottom": null,
            "marginRight": 0,
            "marginTop": "0.3125rem",
          }
        }
      >
        <span
          className="k-u-line-height-normal k-u-size-micro k-u-weight-light"
        >
          Custom information #3
        </span>
      </div>
    </div>
    <div
      data-radium={true}
      style={
        Object {
          "marginBottom": "1.25rem",
          "marginTop": "0.9375rem",
          "padding": "0 10px",
        }
      }
    >
      <div
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="84"
        className="k-Progress"
        role="progressbar"
      >
        <div
          className="k-Progress__ramp"
          style={
            Object {
              "height": "4px",
            }
          }
        >
          <div
            className="k-Progress__slider"
            style={
              Object {
                "backgroundColor": "null",
                "width": "84%",
              }
            }
          />
        </div>
      </div>
    </div>
    <div
      data-radium={true}
      style={
        Object {
          "WebkitAlignItems": "center",
          "WebkitBoxAlign": "center",
          "alignItems": "center",
          "backgroundColor": "#fff",
          "display": "inline-flex",
          "lineHeight": "1",
          "msFlexAlign": "center",
          "padding": "10px",
          "position": "absolute",
          "right": "0",
          "top": "0",
        }
      }
    >
      <span
        className="k-u-line-height-normal k-u-size-micro k-u-weight-regular"
      >
        Custom state
      </span>
    </div>
  </a>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
  />
</div>
`;
